--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="a.png" alt="Ashish profile picture"></td>
+        <td><img src="a.jpg" alt="Ashish profile picture"></td>
         <td>   <h1>Ashish Dash</h1>
            <p><em>Student and developer</em></p>
            <p><em>I am IOS developer at<strong><a href="https://www.londonappbrewery.com/">THE APP BREWERY</a></strong></em></p></td>
